# djgent-chat

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
chat/: admin.py  models.py  urls.py  views.py
chat/langgraph/: __init__.py  state.py  workflow.py
chat/langgraph/nodes/: __init__.py  generate.py  retrieve.py
chat/management/commands/: __init__.py  index_documents.py
chat/migrations/: 0001_initial.py
chat/services/: __init__.py  base.py  chunking_service.py  document_service.py  embedding_service.py  langchain_embeddings.py  langchain_rag_service.py  langchain_vectorstore.py  rag_service.py  vector_store_service.py
chat/services/vectorstore/: __init__.py  base.py  chromadb.py  factory.py  faiss.py  pinecone.py
chat/static/chat/css/: chat.css
chat/static/chat/js/: chat.js
chat/templates/chat/: base.html  chat.html  settings.html
chat/utils/: __init__.py  config.py  helpers.py
config/: settings.py
plans/: implementation_plan.md  langchain_migration_plan.md  vector_storage_multi_backend_plan.md
