[project]
name = "djgent-chat"
version = "0.1.0"
description = "Django-based AI Chat application with RAG using FAISS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.1",
    "faiss-cpu>=1.7.4",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-google-genai>=0.0.6",
    #"sentence-transformers>=2.3.1",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.1",
    "python-docx>=1.1.0",
    "openai>=1.10.0",
    "google-generativeai>=0.3.2",
    "anthropic>=0.18.0",
    "numpy>=1.24.0",
]
